kubernetes/detail-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  namespace: app
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25% c
  replicas: 2
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
        - name: blue-container
          image: 432231866893.dkr.ecr.ap-northeast-2.amazonaws.com/blue:latest
	  imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
            requests:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - name: http
              containerPort: 8080
      tolerations:
        - key: dedicated
          value: app
          effect: NoSchedule
      nodeSelector:
        dedicated: app


#톨러레이션, 노드 어피니티, readinessProbe, livenessProbe, Startup Probe, terminationGracePeriodSeconds, Graceful shutdow, container lifecycle hooks 추가하기
