kubernetes/NLB-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: dev
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    #service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  externalTrafficPolicy: Local
  selector:
    app: test
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
