kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: match
  namespace: skills
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/health"
spec:
  selector:
    app: match
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
