kubernetes/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: match
    namespace: skills
    annotations:
      kubernetes.io/ingress.class: alb
      alb.ingress.kubernetes.io/load-balancer-name: match-alb
      alb.ingress.kubernetes.io/group.name: skills-match-tg
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
# if you subnet hard appointed      
#      alb.ingress.kubernetes.io/subnets: subnet-035d7aa436e3f19b6, subnet-05d0d98516c831359, subnet-0b5b2a255e576cc8c
      alb.ingress.kubernetes.io/healthcheck-path: "/health"
      alb.ingress.kubernetes.io/actions.response-403: >
        {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"403"}}
spec:
    rules:
    - http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: match
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: response-403
                port:
                  name: use-annotation
